fixing spacing

--- a/about.css
+++ b/about.css
@@ -7,14 +7,14 @@ p {
 
 main {
   /* MAIN */
-  padding: 15px;
+  padding: 20px 1px;
 }
 
 .flex-container {
   display: flex;
   gap: 20px;
-  padding: 20px;
   align-items: flex-start;
+  width: 100%;
 }
 
 .flex-item {
@@ -36,7 +36,7 @@ main {
 }
 
 .flex-item p {
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.6;
 }
 
@@ -54,16 +54,12 @@ a {
     font-size: 14px;
   }
 
-  .flex-item {
-    font-size: 16px;
-  }
-
   .flex-item p {
     font-size: 14px;
   }
 
   .flex-container {
     gap: 1em;
-    width: 95%;
+    width: 100%;
   }
 }
