--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 p {
   /* PARAGRAPH SETTINGS */
-  font-size: 15px;
+  font-size: 14px;
 }
 
 h2.header {
